--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Turma aprimeiradeads
 ###############################################
 
 navbar-links:
-  About Me: "https://www.instagram.com/aprimeiradeads/"
+  About Us: "https://www.instagram.com/aprimeiradeads/"
   Resources:
     - Github: "https://github.com/aprimeiradeads"
     - Learn markdown: "https://www.markdowntutorial.com/"
